app/assets/css/radio.css
:root {
    --url-radio: url('https://i.pinimg.com/736x/7f/0f/37/7f0f376078deb7eddb6698590136014c.jpg');
}

.hidden {
    display: none;
    visibility: hidden;
}

.radio {
    background-color: black;
    position: absolute;
    background-size: cover;
    margin:0;
    width:100%;
    height:100%;
    background-repeat: no-repeat;
}

.radio-launcher {
    border-radius: 15px;
    position: relative;
    display: flex;
    text-align: center;
    height: 45vh;
    background: #30303094;
    align-items: center;
    justify-content: space-around;
}

.img-radio {
    display: flex;
    margin-left: 32px;
}

.musique-img {
    border-radius: 15px;
    max-width: 100vh;
    height: 40vh;
}

.player_btn {
    margin-top: 5px;
}

.description {
    padding: 53px;
    color: white;
    display: flex;
    align-items: center;
    align-content: flex-end;
    justify-content: center;
    flex-direction: column;
}

.musique-title {
    font-weight: bolder;
    margin-bottom: 10px;
    font-size: 25px;
}

.play,
.pause {
    cursor: pointer;
    height: 50px;
    width: 50px;
}

.slider-cont {
    display: flex;
    align-items: center;
    padding: 25px;
    border-radius: 5px 25px 25px 5px;
}

.slider {
    position: relative;
    width: 200px;
    height: 25px;
    margin-top: 5px;
}

.slider input {
    position: absolute;
    left: 1px;
    top: 4px;
    width: 195px;
    height: 20px;
    -webkit-appearance: none;
    background-color: transparent;
    z-index: 99;
}

.slider input::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 20px;
    height: 20px;
    background-color: #fff;
    border: 2px solid #e91e63;
    border-radius: 50%;
    cursor: pointer;
}

.slider progress {
    width: 190px;
    height: 7px;
    -webkit-appearance: none;
    position: absolute;
    top: 10px;
    left: 5px;
    border-radius: 10px;
    overflow: hidden;
}

.slider progress::-webkit-progress-bar {
    background-color: #f0f0f0;
}

.slider progress::-webkit-progress-value {
    background-color: #e91E63;
}

.slider-value {
    color: white;
    width: 28px;
    height: 20px;
    height: 20px;
    margin: 10px;
    text-align: center;
    padding-right: 10px;
}

#radioContainer {
    height: 100%;

    display: flex;
    align-items: center;
    justify-content: center;
}

#radioContainer::before {
    content: "";

    position: absolute;

    height: calc(100vh - 22px);
    width: 100vw;

    background-image: var(--url-radio);
    background-repeat: no-repeat;
    background-size: cover;

    filter: blur(25px);


    background-position-x: center;
    background-position-y: center;
}

.radio-home-button {
    display: block;

    background: #fff;

    border: none;
    border-radius: 25px;

    color: #000;

    padding: .3rem .8rem;
    margin: 2rem auto 0;

    font-size: 1.1rem;

    cursor: pointer;
}

